shifted up text on about page to avoid the view port from getting too big

--- a/iphone/www/content/hollastyles.css
+++ b/iphone/www/content/hollastyles.css
@@ -12,7 +12,7 @@
 }
 
 .aboutbox{
-	padding-top: 50px;
+	padding-top: 40px;
 	margin: 10px;
 }
 
